ifupdown (0.8.35) UNRELEASED; urgency=medium

  [ Ondřej Nový ]
  * d/copyright: Use https protocol in Format field
  * d/changelog: Remove trailing whitespaces

  [ Guus Sliepen ]
  * Deprecate the netmask and broadcast options. Closes: #912220
  * Bump Standards-Version and Build-Depends on debhelper-compat (= 12).

 -- Guus Sliepen <guus@debian.org>  Mon, 28 Jan 2019 15:11:05 +0100

ifupdown (0.8.34) unstable; urgency=medium

  [ Guus Sliepen ]
  * Handle SIGINT and SIGTERM more gracefully.
  * VLAN interfaces in the same allow class are now brought up automatically
    if the physical interface is brought up.

  [ Antonio Terceiro ]
  * Don't call udevadm settle if udev is not installed. Closes: #900046

 -- Guus Sliepen <guus@debian.org>  Fri, 25 May 2018 22:34:33 +0200

ifupdown (0.8.33) unstable; urgency=medium

  [ Guus Sliepen ]
  * Allow an interface to recursively bring up VLAN interfaces.
    Closes: #899355

  [ Benjamin Drung ]
  * Split 'udevadm settle' from networking.service. Closes: #899002

 -- Guus Sliepen <guus@debian.org>  Thu, 24 May 2018 16:33:17 +0200

ifupdown (0.8.32) unstable; urgency=medium

  [ Guus Sliepen ]
  * Fix check-mac-address.sh and get-mac-address.sh example scripts.
  * Update the manpages and add an entry to NEWS about the possibility that
    ifupdown runs in parallel. Closes: #894511
  * Migrate the VCS repository to Salsa.
  * Allow ifquery to be run recursively from ifup and ifdown. Closes: #896433

  [ Filipe Brandenburger ]
  * Prevent ExecStartPre from exiting with non-zero status when not supposed
    to do anything. Closes: #894759

 -- Guus Sliepen <guus@debian.org>  Tue, 24 Apr 2018 18:15:34 +0200

ifupdown (0.8.31) unstable; urgency=medium

  * Do not enable ifupdown-wait-online.service by default. Closes: #891139
  * Drop Before=network.target from ifupdown-wait-online.service.

 -- Guus Sliepen <guus@debian.org>  Sat, 03 Mar 2018 17:49:51 +0100

ifupdown (0.8.30) unstable; urgency=medium

  [ Guus Sliepen ]